# dbauri

./: README.md  farm.config.ts  index.html  package-lock.json  package.json  vite.config.ts
db/: dockerfile  init.sql
docs/: NEW_PARTICIPANT_GUIDE.md
src/: App.tsx  custom.scss  index.tsx
src-tauri/: .env  .gitignore  Cargo.toml  build.rs  db.json  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  main.rs  models.rs  tests.rs
src/components/: ConnectionForm.tsx  QueryEditor.tsx  SchemaList.tsx  SideBar.tsx  TableDetails.tsx  TableList.tsx
src/context/: ConnectionContext.tsx
