[package]
name = "dbauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }



[dependencies]
tauri = { version = "1", features = [ "dialog-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres =  { version = "0.7.10", features = ["with-chrono-0_4", "with-uuid-1"] }
tokio = {version ="1", features = ["full"] }
anyhow = "1.0.86"
chrono = { version = "0.4" }
uuid = { version = "1", features = ["v4"] }
rust_decimal = { version = "^1", features = ["db-tokio-postgres"] }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
